fix: header menu dropdown z-index
Refs: #39

--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -75,6 +75,7 @@ header {
 
       &.is-open {
         display: flex;
+        z-index: 1;
       }
 
       > li {
